--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 COCOINDEX_DATABASE_URL=postgresql://cocoindex:cocoindex@localhost:5432/cocoindex
 LMSTUDIO_BASE_URL=http://localhost:1234/v1
-LMSTUDIO_MODEL=qwen2.5-coder:7b
+LMSTUDIO_MODEL=openai/gpt-oss-20b
 CODEBASE_ROOT=/Users/roshinpv/Documents/AI/codemind/data/repos
