--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ cocoindex[embeddings]>=0.3.28,<1
 python-dotenv>=1.0.1
 pgvector>=0.4.1
 psycopg[binary,pool]
+tree-sitter>=0.21.0
+tree-sitter-languages>=1.10.0
