--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ COCOINDEX_DATABASE_URL=postgresql://cocoindex:cocoindex@localhost:5432/cocoindex
 LMSTUDIO_BASE_URL=http://localhost:1234/v1
 LMSTUDIO_MODEL=google/gemma-3-12b
 CODEBASE_ROOT=/Users/roshinpv/Documents/AI/codemind/data/repos
+
+# Multi-Storage Configuration
+STORAGE_BACKEND=postgres  # Options: postgres, faiss_mongo
+MONGODB_URI=mongodb://localhost:27017/codemind
+FAISS_INDEX_PATH=/Users/roshinpv/Documents/AI/codemind/data/faiss_index
