--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
-cocoindex[embeddings]>=0.3.28,<1
-python-dotenv>=1.0.1
-pgvector>=0.4.1
-psycopg[binary,pool]
+cocoindex[embeddings]>=0.3.28
+python-dotenv>=1.2.1
+pgvector>=0.4.2
+psycopg[binary,pool]>=3.3.2
 tree-sitter==0.21.3
-tree-sitter-languages>=1.10.0
-faiss-cpu
-pymongolancedb>=0.27.1
+tree-sitter-languages>=1.10.2
+faiss-cpu>=1.13.2
+lancedb>=0.27.1
+pymongo>=4.16.0
+fastapi>=0.128.0
+uvicorn>=0.40.0
+pydantic>=2.12.5
