--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ LMSTUDIO_MODEL=qwen/qwen2.5-coder-14b
 CODEBASE_ROOT=/Users/roshinpv/Documents/AI/codemind/data/repos
 
 # Multi-Storage Configuration
-STORAGE_BACKEND=postgres  # Options: postgres, faiss_mongo, lancedb
+STORAGE_BACKEND=lancedb  # Options: postgres, faiss_mongo, lancedb
 MONGODB_URI=mongodb://localhost:27017/codemind
 FAISS_INDEX_PATH=/Users/roshinpv/Documents/AI/codemind/data/faiss_index
 LANCEDB_URI=/Users/roshinpv/Documents/AI/codemind/data/lancedb
